--- a/EffectViewDemo/EffectViewDemo/Info.plist
+++ b/EffectViewDemo/EffectViewDemo/Info.plist
@@ -45,5 +45,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>timedg</string>
+	</array>
 </dict>
 </plist>
